--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore Python virtual environments
-mindhaven_env/
-Mindhaven_Chatbot/ 
+Mindhaven_Chatbot/
+
+# Ignore model directory
+backend/app/model/mindhaven_t5_model_tf/
 
 # Ignore Python cache
 __pycache__/
@@ -8,19 +10,19 @@ __pycache__/
 *.pyo
 *.pyd
 
-# Ignore notebooks metadata
+# Ignore notebook metadata
 *.ipynb_checkpoints
 
 # Ignore environment files
 .env
 .env.*
 
-# Ignore frontend build + modules
+# Ignore frontend build artifacts
 frontend/node_modules/
 frontend/dist/
 frontend/.vite/
 
-# Ignore system/macOS files
+# Ignore macOS/system files
 .DS_Store
 
 # Ignore log files
